Fix: Align earth figure below "Sign" menu

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -145,6 +145,30 @@ nav ul li:hover .submenu2 ul li:hover a {
   margin-left: 30px;
 }
 
+/* Terra alinhada abaixo do menu Signin */
+.signinItem {
+  position: relative;
+}
+.earthFigure {
+  position: absolute;
+  top: calc(100% + 8px);
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 0;
+  pointer-events: none;
+}
+.earthFigure img {
+  height: 40rem;
+  opacity: 0.3;
+  display: block;
+}
+
+@media (max-width: 900px) {
+  .earthFigure img { height: 32rem; }
+}
+@media (max-width: 400px) {
+  .earthFigure img { height: 28rem; }
+}
 
 
 @media (max-width: 1500px) {
